[23] JEP 476: Module Import Declarations (Preview)
more tests regarding:
+ shadowing
+ ambiguity
+ accessibility (incl. fix)
+ packages from requires transitive (incl. fix)
+ redundant imports (flag as unused)
+ module import in CU in unnamed module